--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -27,7 +27,7 @@
 	@include responsive($tablet-portrait) {
 		min-height: 5rem;
 		padding: 1rem;
-		max-width: 50%;
+		max-width: 50vw;
 
 		&__icon {
 			font-size: 3.5rem;
