--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -21,18 +21,16 @@
 
         &:not(:last-child) {
             margin-right: $grid-gutter-horizontal;
-
-            @include responsive($tablet-portrait) {
-                margin-right: 0;
-            }
         }
 
         @include responsive($tablet-portrait) {
             width: 100% !important;
-            margin-right: 0;
-            margin-bottom: $grid-gutter-vertical-small;
-        }
 
+            &:not(:last-child) {
+                margin-right: 0;
+                margin-bottom: $grid-gutter-vertical-small;
+            }
+        }
     }
 
     .col-1-of-2 {
